--- a/javascript/js/5.functions-closures/1.global-object.md
+++ b/javascript/js/5.functions-closures/1.global-object.md
@@ -3,8 +3,8 @@
 ### Обязательные
  
 * Каков будет результат? [Window и переменная](https://learn.javascript.ru/task/window-and-variable)
-  > ...
+  > a = 1 т.к. а будет создана на фазе инициализации
 * Каков будет результат? [Window и переменная 2](https://learn.javascript.ru/task/window-and-variable-2)
-  > ...
+  > a is not defined т.к. а не будет создана на фазе инициализации
 * Каков будет результат? [Window и переменная 3](https://learn.javascript.ru/task/window-and-variable-3)
-  > ...
+  > a = 1 т.к. а будет создана на фазе инициализации
