--- a/javascript/js/5.functions-closures/2.closures.md
+++ b/javascript/js/5.functions-closures/2.closures.md
@@ -3,10 +3,12 @@
 ### Обязательные
  
 * [Что выведет say в начале кода?](https://learn.javascript.ru/task/say-phrase-first)
-  > ...
-* Каков будет результат выполнения этого кода? Почему? [В какую переменную будет присвоено значение?
-](https://learn.javascript.ru/task/which-value-is-modified)
-  > ...
-* Каков будет результат выполнения этого кода? Почему? [var window
-](https://learn.javascript.ru/task/var-window)
-  > ...
+  > будет: Вася, undefined
+* [В какую переменную будет присвоено значение?](https://learn.javascript.ru/task/which-value-is-modified)
+  > alert выведет true. На момнет инициализации будет создана локальная пременная value, которая оптом перезапишется. Если из строки var value = false убрать var 
+  то локальная переменная не будет создана на момент инициализации, поэтому перезапишется глобальная переменная value, но результат останется тем же.
+* [var window](https://learn.javascript.ru/task/var-window)
+  > Первый alert выведет undefined, второй - 5
+* [Глобальный счётчик](https://learn.javascript.ru/task/counter-window-variable)
+   > 1, 2, 3, 4
+
