--- a/javascript/js/5.functions-closures/4.closures-usage.md
+++ b/javascript/js/5.functions-closures/4.closures-usage.md
@@ -2,8 +2,8 @@
 
 ### Обязательные
  
-* [Функция - строковый буфер](https://learn.javascript.ru/task/stringbuffer) - [см. решение]()
-* [Строковый буфер с очисткой](https://learn.javascript.ru/task/stringbuffer-with-clear) - [см. решение]()
-* [Сортировка](https://learn.javascript.ru/task/sort-by-field) - [см. решение]()
-* [Фильтрация через функцию](https://learn.javascript.ru/task/filter-through-function) - [см. решение]()
-* [Армия функций](https://learn.javascript.ru/task/make-army) - [см. решение]()
+* [Функция - строковый буфер](https://learn.javascript.ru/task/stringbuffer) - [см. решение](http://plnkr.co/edit/UmE3plFonIZv9OFKXNBm?p=preview)
+* [Строковый буфер с очисткой](https://learn.javascript.ru/task/stringbuffer-with-clear) - [см. решение](http://plnkr.co/edit/p988FcQYd66qqmBDVifC?p=preview)
+* [Сортировка](https://learn.javascript.ru/task/sort-by-field) - [см. решение](https://plnkr.co/edit/uYTPUB7YOWkIPG3m4I9Y?p=preview)
+* [Фильтрация через функцию](https://learn.javascript.ru/task/filter-through-function) - [см. решение](http://plnkr.co/edit/YwpDZ2EqTkivCU9RPLJE?p=preview)
+* [Армия функций](https://learn.javascript.ru/task/make-army) - [см. решение](http://plnkr.co/edit/tP3skC3jOew4xcvqpVJ1?p=preview)
