--- a/javascript/ui/5.widgets/4.template-lodash.md
+++ b/javascript/ui/5.widgets/4.template-lodash.md
@@ -5,6 +5,6 @@
 * [Шаблон для таблицы с пользователями](https://learn.javascript.ru/task/table-template) - [см. решение](http://plnkr.co/edit/nNEweWZOzggvYtLDm9NL?p=preview)
 
 * [Шаблон в div с display:none?](https://learn.javascript.ru/task/template-display-none)
-  > лучше <script>
+  > лучше script
 
 * [Сделайте меню ссылками](https://learn.javascript.ru/task/menu-template) - [см. решение](http://plnkr.co/edit/LS4u26yNHRI0Dv1MdZ0c?p=preview)
