--- a/javascript/js/2.first-steps/1.hello-world.md
+++ b/javascript/js/2.first-steps/1.hello-world.md
@@ -2,7 +2,4 @@
 
 ### Обязательные
  
-* []() - [см. решение]()
-
-* []()
-  > ...
+* [Выведите alert](https://learn.javascript.ru/task/hello-alert) - [см. решение](http://plnkr.co/edit/T9jZgKPezO3hcvYr5bPy?p=preview)
