--- a/javascript/js/2.first-steps/12.ifelse.md
+++ b/javascript/js/2.first-steps/12.ifelse.md
@@ -2,7 +2,9 @@
 
 ### Обязательные
  
-* []() - [см. решение]()
+* [if (строка с нулём)](https://learn.javascript.ru/task/if-zero-string)
+  > да, так как "0" - не пуста] строка
+  
+* [Перепишите 'if' в '?'](https://learn.javascript.ru/task/rewrite-if-question) - [см. решение](https://plnkr.co/edit/b3CeXKD26J1T07BIWXhT?p=catalogue)
 
-* []()
-  > ...
+* [Перепишите 'if..else' в '?'](https://learn.javascript.ru/task/rewrite-if-else-question) - [см. решение](https://plnkr.co/edit/obC8HBMCj8WeAN7OPY01?p=catalogue)
