--- a/javascript/js/2.first-steps/13.logical-ops.md
+++ b/javascript/js/2.first-steps/13.logical-ops.md
@@ -1,8 +1,16 @@
 # [Логические операторы](https://learn.javascript.ru/logical-ops)
 
 ### Обязательные
- 
-* []() - [см. решение]()
 
-* []()
-  > ...
+* [Что выведет alert (ИЛИ)?](https://learn.javascript.ru/task/alert-null-2-undefined)
+  > 2
+* [Что выведет alert (И)?](https://learn.javascript.ru/task/alert-1-null-2)
+  > null
+* [Что выведет этот код?](https://learn.javascript.ru/task/alert-and-or)
+  > 3
+* [Вопрос про "if"](https://learn.javascript.ru/task/if-question)
+  > -1 Выполнится
+  
+  > 0 Не выполнится
+  
+  > true Выполнится
