--- a/javascript/js/2.first-steps/15.while-for.md
+++ b/javascript/js/2.first-steps/15.while-for.md
@@ -2,7 +2,8 @@
 
 ### Обязательные
  
-* []() - [см. решение]()
+* [Выведите чётные числа](https://learn.javascript.ru/task/for-even) - [см. решение](http://plnkr.co/edit/oiNCAAbsnvDUJTMg0YIK?p=preview)
 
-* []()
-  > ...
+* [Замените for на while](https://learn.javascript.ru/task/replace-for-while) - [см. решение](http://plnkr.co/edit/FlMcnYBus4UMynApYmCI?p=info)
+
+* [Повторять цикл, пока ввод неверен](https://learn.javascript.ru/task/repeat-until-correct) - [см. решение](http://plnkr.co/edit/UuOIU3x7Wqlv0AUsimP0?p=preview)
