--- a/javascript/js/2.first-steps/16.switch.md
+++ b/javascript/js/2.first-steps/16.switch.md
@@ -2,7 +2,4 @@
 
 ### Обязательные
  
-* []() - [см. решение]()
-
-* []()
-  > ...
+* [Напишите "if", аналогичный "switch"](https://learn.javascript.ru/task/rewrite-switch-if-else) - [см. решение](http://plnkr.co/edit/0RIPelRjlGYyhwF10F9y?p=catalogue)
