--- a/javascript/js/2.first-steps/2.external-script.md
+++ b/javascript/js/2.first-steps/2.external-script.md
@@ -2,7 +2,4 @@
 
 ### Обязательные
  
-* []() - [см. решение]()
-
-* []()
-  > ...
+* [Вывести alert внешним скриптом](https://learn.javascript.ru/task/hello-alert-ext) - [см. решение](http://plnkr.co/edit/RK7fiElYz14x01RRrCfp?p=preview)
