--- a/javascript/js/2.first-steps/20.named-function-expression.md
+++ b/javascript/js/2.first-steps/20.named-function-expression.md
@@ -1,8 +1,7 @@
 # [Именованные функциональные выражения](https://learn.javascript.ru/named-function-expression)
 
 ### Обязательные
- 
-* []() - [см. решение]()
 
-* []()
-  > ...
+* [Проверка на NFE](https://learn.javascript.ru/task/nfe-check)
+  > 'function g() { return 1; };'
+  > g is not defined
