--- a/javascript/js/2.first-steps/8.operators.md
+++ b/javascript/js/2.first-steps/8.operators.md
@@ -2,7 +2,5 @@
 
 ### Обязательные
  
-* []() - [см. решение]()
-
-* []()
-  > ...
+* [Инкремент, порядок срабатывания](https://learn.javascript.ru/task/increment-order)
+  > да
