--- a/javascript/js/3.writing-js/4.testing.md
+++ b/javascript/js/3.writing-js/4.testing.md
@@ -2,7 +2,11 @@
 
 ### Обязательные
  
-* []() - [см. решение]()
-
-* []()
-  > ...
+ * [Сделать pow по спецификации](https://learn.javascript.ru/task/pow-nan-spec) - [см. решение](http://plnkr.co/edit/woSvGUCW2QNpUZ8yNB53?p=preview)
+ 
+ * [Добавьте тест к задаче](https://learn.javascript.ru/task/pow-test-0) - [см. решение](http://plnkr.co/edit/aScAC9yTJtGtmTuFy369?p=preview)
+ 
+ * [Что не так в тесте?](https://learn.javascript.ru/task/pow-test-wrong)
+  > Нужно разбить на несколько it блоков.
+  
+  
